v0.5.6.0 : Format code